--- a/.gitignore
+++ b/.gitignore
@@ -75,3 +75,13 @@ $RECYCLE.BIN/
 
 # Windows shortcuts
 *.lnk
+
+# local env files
+.env*.local
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
