--- a/.gitignore
+++ b/.gitignore
@@ -81,7 +81,10 @@ $RECYCLE.BIN/
 
 # dotenv environment variable files
 .env
+*.env
 .env.development.local
 .env.test.local
 .env.production.local
 .env.local
+
+data/*
