--- a/pg_hba.conf
+++ b/pg_hba.conf
@@ -21,8 +21,8 @@
 # connections).
 #
 # TYPE  DATABASE        USER            ADDRESS                 METHOD
-local   all             all                                     trust
-# local   all             all                                     md5
+local   all             all                                  trust
+local   all             all                                     md5
 
 # IPv4 local connections:
 host    all             all             127.0.0.1/32            md5
