--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -1,14 +1,24 @@
-FROM redis
-COPY --chmod=644 conf/redis.conf /usr/local/etc/redis/redis.conf
-CMD [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
+# FROM redis
 
-# FROM alpine:3.18
+# COPY --chmod=644 conf/redis.conf /usr/local/etc/redis/redis.conf
+# RUN mkdir -p /var/lib/redis && \
+#     mkdir -p /var/log/redis/ && \
+#     touch /var/log/redis/redis.log && \
+#     chmod 777 /var/log/redis/redis.log
 
-# RUN apk upgrade --no-cache && \
-#     apk add --no-cache  redis
+# CMD [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
 
-# COPY --chmod=644 conf/redis.conf /etc/redis.conf
+FROM alpine:3.18
 
-# ENTRYPOINT ["redis-server", "/etc/redis.conf"]
+RUN apk upgrade --no-cache && \
+    apk add --no-cache  redis && \
+    mkdir -p /var/lib/redis && \
+    mkdir -p /var/log/redis/ && \
+    touch /var/log/redis/redis.log && \
+    chmod 777 /var/log/redis/redis.log
 
-# STOPSIGNAL SIGQUIT
+COPY --chmod=644 conf/redis.conf /etc/redis.conf
+
+ENTRYPOINT ["redis-server", "/etc/redis.conf"]
+
+STOPSIGNAL SIGQUIT
