--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,7 +41,7 @@ services:
     #   - ./backend/.env
     # network 설정에 따라 삭제 가능
     expose:
-      - "3000"
+      - "3001"
       - "81"
       - "83"
       - "85"
@@ -56,7 +56,7 @@ services:
     networks:
       - transcendence
     ports:
-      - 3000:3000
+      - 3001:3001
       - 81:81
       - 83:83
       - 85:85
@@ -127,6 +127,94 @@ services:
     networks:
       - transcendence
 
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:v0.47.2
+    container_name: cadvisor
+    restart: unless-stopped
+    privileged: true
+    ports:
+      - "8080:8080"
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:ro
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
+      - /dev/disk/:/dev/disk:ro
+    networks:
+      - transcendence
+
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus
+    user: root
+    volumes:
+      - ./prometheus/:/etc/prometheus/
+      - ./prometheus/data:/prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+        # - "--storage.tsdb.path=/prometheus"
+      - "--web.enable-lifecycle"
+    ports:
+      - 9090:9090
+    expose:
+      - 9090
+    networks:
+      - transcendence
+    restart: always
+
+  grafana:
+    container_name: grafana
+    image: grafana/grafana
+    user: root
+    volumes:
+      - ./grafana/data:/var/lib/grafana
+      - ./grafana/grafana.ini:/etc/grafana/grafana.ini
+      - "./grafana/datasources.yml:/etc/grafana/provisioning/datasources/datasources.yml"
+      - "./grafana/dashboard.json:/var/lib/grafana/dashboards/dashboard.json"
+      - "./grafana/default.yaml:/etc/grafana/provisioning/dashboards/default.yaml"
+    ports:
+      - 3000:3000
+    expose:
+      - 3000
+    networks:
+      - transcendence
+    restart: always
+
+  nginx:
+    container_name: proxy_server
+    image: nginx:1.23-alpine
+    extra_hosts:
+      - host.docker.internal:host-gateway
+    ports:
+      - 80:80
+    volumes:
+      - ./proxy/nginx.conf:/etc/nginx/nginx.conf
+    networks:
+      - transcendence
+    depends_on:
+      - backend
+
+  node-exporter:
+    container_name: node-exporter
+    image: quay.io/prometheus/node-exporter:latest
+    command:
+      - "--path.procfs=/host/proc"
+      - "--path.sysfs=/host/sys"
+      - "--collector.filesystem.ignored-mount-points"
+      - "^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)"
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    ports:
+      - 9100:9100
+    expose:
+      - 9100
+    networks:
+      - transcendence
+    pid: host
+    restart: unless-stopped
+
 networks:
   transcendence:
     name: transcendence
@@ -140,4 +228,3 @@ volumes:
       o: "bind"
       type: "none"
       device: /Users/jusohn/data
-
