--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,9 +18,9 @@ services:
       - "85"
     healthcheck:
       interval: 5s
-      test: ["CMD-SHELL", "wget -O - https://localhost:3333 || exit 1"]
-      timeout: 3s
-      retries: 3
+      test: ["CMD-SHELL", "wget -O - http://localhost:3333 || exit 1"]
+      timeout: 10s
+      retries: 15
     image: frontend:LastExTranscendence
     init: true
     networks:
@@ -48,9 +48,9 @@ services:
       # - "6379"
     healthcheck:
       interval: 5s
-      test: ["CMD-SHELL", "wget -O - https://localhost:3000 || exit 1"]
-      timeout: 8s
-      retries: 15
+      test: ["CMD-SHELL", "wget -O - http://localhost:3001 || exit 1"]
+      timeout: 10s
+      retries: 20
     image: backend:LastExTranscendence
     init: true
     networks:
@@ -182,7 +182,13 @@ services:
 
   nginx:
     container_name: proxy_server
+    depends_on:
+      frontend:
+        condition: service_healthy
+      backend:
+        condition: service_healthy
     image: nginx:1.23-alpine
+    restart: always
     extra_hosts:
       - host.docker.internal:host-gateway
     ports:
@@ -191,8 +197,6 @@ services:
       - ./proxy/nginx.conf:/etc/nginx/nginx.conf
     networks:
       - transcendence
-    depends_on:
-      - backend
 
   node-exporter:
     container_name: node-exporter
