--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -126,6 +126,8 @@ services:
     container_name: redis
     networks:
       - transcendence
+    expose:
+      - 6379
 
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:v0.47.2
