--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     healthcheck:
       interval: 5s
       test: ["CMD-SHELL", "wget -O - http://localhost:3333 || exit 1"]
-      timeout: 10s
-      retries: 15
+      timeout: 20s
+      retries: 20
     image: frontend:LastExTranscendence
     init: true
     networks:
@@ -49,7 +49,7 @@ services:
     healthcheck:
       interval: 5s
       test: ["CMD-SHELL", "wget -O - http://localhost:3001 || exit 1"]
-      timeout: 10s
+      timeout: 20s
       retries: 20
     image: backend:LastExTranscendence
     init: true
@@ -233,4 +233,4 @@ volumes:
     driver_opts:
       o: "bind"
       type: "none"
-      device: /Users/jusohn/data
+      device: /Users/jusohn/goinfre/data
